// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonList component renders correctly 1`] = `
<div
  className=" link-comp-wrapper"
>
  <Styled(Anchor)
    className="link-button"
    href="/girl"
    key="Girl"
    target=""
    title="Girl"
  >
    <Styled(Button)
      buttonVariation="category-links-dark"
      className="link-button-wrapper-class"
      data-locator="moduleN_cta_links_1"
    >
      Girl
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="link-button"
    href="/toddler-girl"
    key="Toddler_Girl"
    target=""
    title="Toddler Girl"
  >
    <Styled(Button)
      buttonVariation="category-links-dark"
      className="link-button-wrapper-class"
      data-locator="moduleN_cta_links_2"
    >
      Toddler Girl
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="link-button"
    href="/boy"
    key="Boy"
    target=""
    title="Boy"
  >
    <Styled(Button)
      buttonVariation="category-links-dark"
      className="link-button-wrapper-class"
      data-locator="moduleN_cta_links_3"
    >
      Boy
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="link-button"
    href="/toddler-boy"
    key="Tod_Boy"
    target=""
    title="Tod Boy"
  >
    <Styled(Button)
      buttonVariation="category-links-dark"
      className="link-button-wrapper-class"
      data-locator="moduleN_cta_links_4"
    >
      Toddler Boy
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="link-button"
    href="/toddler-boy"
    key="Baby"
    target=""
    title="Baby"
  >
    <Styled(Button)
      buttonVariation="category-links-dark"
      className="link-button-wrapper-class"
      data-locator="moduleN_cta_links_5"
    >
      Baby
    </Styled(Button)>
  </Styled(Anchor)>
</div>
`;

exports[`ButtonList component renders correctly for image cta List 1`] = `
<div
  className=" scroll-comp-wrapper"
>
  <div
    className="scroll-cta-wrapper div-image-wrapper"
  >
    <div
      className="img-wrapper"
    >
      <div>
        <Styled(Anchor)
          data-locator="moduleN_cta_links_1"
          fontSizeVariation="large"
          fontWeightVariation="active"
          href="/girl"
          key="0"
          target=""
          title="Girl"
        >
          <WithTheme(DamImage)
            className="image-cta"
            data-locator="moduleN_image_1"
            imgData={
              Object {
                "alt": "Girl",
                "crop_d": "",
                "crop_m": "",
                "crop_t": "",
                "title": "Girl",
                "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
              }
            }
          />
          <div
            className="image-comp"
          >
            Girl
          </div>
        </Styled(Anchor)>
      </div>
    </div>
    <div
      className="img-wrapper"
    >
      <div>
        <Styled(Anchor)
          data-locator="moduleN_cta_links_2"
          fontSizeVariation="large"
          fontWeightVariation="active"
          href="/toddler-girl"
          key="1"
          target=""
          title="Toddler Girl"
        >
          <WithTheme(DamImage)
            className="image-cta"
            data-locator="moduleN_image_2"
            imgData={
              Object {
                "alt": "Toddler Girl alt",
                "crop_d": "",
                "crop_m": "",
                "crop_t": "",
                "title": "Toddler Girl title",
                "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
              }
            }
          />
          <div
            className="image-comp"
          >
            Toddler Girl
          </div>
        </Styled(Anchor)>
      </div>
    </div>
    <div
      className="img-wrapper"
    >
      <div>
        <Styled(Anchor)
          data-locator="moduleN_cta_links_3"
          fontSizeVariation="large"
          fontWeightVariation="active"
          href="/boy"
          key="2"
          target=""
          title="Boy"
        >
          <WithTheme(DamImage)
            className="image-cta"
            data-locator="moduleN_image_3"
            imgData={
              Object {
                "alt": "Boy",
                "crop_d": "",
                "crop_m": "",
                "crop_t": "",
                "title": "Boy",
                "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
              }
            }
          />
          <div
            className="image-comp"
          >
            Boy
          </div>
        </Styled(Anchor)>
      </div>
    </div>
    <div
      className="img-wrapper"
    >
      <div>
        <Styled(Anchor)
          data-locator="moduleN_cta_links_4"
          fontSizeVariation="large"
          fontWeightVariation="active"
          href="/toddler-boy"
          key="3"
          target=""
          title="Tod Boy"
        >
          <WithTheme(DamImage)
            className="image-cta"
            data-locator="moduleN_image_4"
            imgData={
              Object {
                "alt": "Toddler Boy alt",
                "crop_d": "",
                "crop_m": "",
                "crop_t": "",
                "title": "Tod Boy title",
                "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
              }
            }
          />
          <div
            className="image-comp"
          >
            Toddler Boy
          </div>
        </Styled(Anchor)>
      </div>
    </div>
    <div
      className="img-wrapper"
    >
      <div>
        <Styled(Anchor)
          data-locator="moduleN_cta_links_5"
          fontSizeVariation="large"
          fontWeightVariation="active"
          href="/toddler-boy"
          key="4"
          target=""
          title="Baby"
        >
          <WithTheme(DamImage)
            className="image-cta"
            data-locator="moduleN_image_5"
            imgData={
              Object {
                "alt": "Baby Alt",
                "crop_d": "",
                "crop_m": "",
                "crop_t": "",
                "title": "Baby title",
                "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
              }
            }
          />
          <div
            className="image-comp"
          >
            Baby
          </div>
        </Styled(Anchor)>
      </div>
    </div>
  </div>
</div>
`;

exports[`ButtonList component renders correctly for scroll cta buttons 1`] = `
<div
  className=" scroll-comp-wrapper"
>
  <Styled(Anchor)
    className="scroll-button"
    href="/girl"
    key="Girl"
    target=""
    title="Girl"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="scroll-cta-wrapper-class"
      data-locator="moduleN_cta_links_1"
      fill=""
    >
      Girl
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="scroll-button"
    href="/toddler-girl"
    key="Toddler_Girl"
    target=""
    title="Toddler Girl"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="scroll-cta-wrapper-class"
      data-locator="moduleN_cta_links_2"
      fill=""
    >
      Toddler Girl
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="scroll-button"
    href="/boy"
    key="Boy"
    target=""
    title="Boy"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="scroll-cta-wrapper-class"
      data-locator="moduleN_cta_links_3"
      fill=""
    >
      Boy
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="scroll-button"
    href="/toddler-boy"
    key="Tod_Boy"
    target=""
    title="Tod Boy"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="scroll-cta-wrapper-class"
      data-locator="moduleN_cta_links_4"
      fill=""
    >
      Toddler Boy
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="scroll-button"
    href="/toddler-boy"
    key="Baby"
    target=""
    title="Baby"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="scroll-cta-wrapper-class"
      data-locator="moduleN_cta_links_5"
      fill=""
    >
      Baby
    </Styled(Button)>
  </Styled(Anchor)>
</div>
`;

exports[`ButtonList component renders correctly with props for stacked CTA buttons 1`] = `
<div
  className=" stack-comp-wrapper"
>
  <Styled(Anchor)
    className="stacked-button"
    href="/girl"
    key="Girl"
    target=""
    title="Girl"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="stacked-cta-wrapper-class"
      data-locator="moduleN_cta_links_1"
      fill=""
    >
      Girl
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="stacked-button"
    href="/toddler-girl"
    key="Toddler_Girl"
    target=""
    title="Toddler Girl"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="stacked-cta-wrapper-class"
      data-locator="moduleN_cta_links_2"
      fill=""
    >
      Toddler Girl
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="stacked-button"
    href="/boy"
    key="Boy"
    target=""
    title="Boy"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="stacked-cta-wrapper-class"
      data-locator="moduleN_cta_links_3"
      fill=""
    >
      Boy
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="stacked-button"
    href="/toddler-boy"
    key="Tod_Boy"
    target=""
    title="Tod Boy"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="stacked-cta-wrapper-class"
      data-locator="moduleN_cta_links_4"
      fill=""
    >
      Toddler Boy
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="stacked-button"
    href="/toddler-boy"
    key="Baby"
    target=""
    title="Baby"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="stacked-cta-wrapper-class"
      data-locator="moduleN_cta_links_5"
      fill=""
    >
      Baby
    </Styled(Button)>
  </Styled(Anchor)>
</div>
`;

exports[`ButtonList component renders correctly without props 1`] = `
<div
  className=" "
>
  <Component />
</div>
`;
